Added endpoint for seraching by category id and using keyword